cmake_minimum_required(VERSION 3.5)
project(TRINEX_ENGINE_EDITOR LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(TRINEX_ENGINE_EDITOR_PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(TRINEX_ENGINE_EDITOR_SOURCES_ROOT ${TRINEX_ENGINE_EDITOR_PROJECT_ROOT}/src)

add_subdirectory(libs)
add_subdirectory(src)
target_include_directories(TrinexEngineEditor PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>")

install(DIRECTORY resources DESTINATION ${TRINEX_INSTALL_DIR})
